# otus_cpp_professional_hw-03

./: CMakeLists.txt  allocator.cpp
resources/: allocator  meeting_saved_chat.txt
